# less

./: .gitignore  README.md  pyproject.toml  web_ui_plan.md
examples/: sample.txt
src/less/: constants.py  indexer.py  searcher.py
